# Basic-Neural-Network

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: ActivationFunctions.cpp  ActivationFunctions.h  AnyObject.h  DataLoader.cpp  DataLoader.h  GlobalUsings.h  Layer.cpp  Layer.h  LossFunctions.cpp  LossFunctions.h  NeuralNetwork.cpp  NeuralNetwork.h  Optimizers.cpp  Optimizers.h  Random.h  Utils.cpp  Utils.h  sources.cmake
tests/: Helpers.h  Setup.h  TestNeuralNetwork.cpp  sources.cmake  test_neural_network.cpp
